# testrelease

./: pyproject.toml
.github/workflows/: release.yml
src/tesdtrelease/: __init__.py
