[project]
name = "tesdtrelease"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "raykang35", email = "raykang35@icloud.com" }
]
requires-python = ">=3.9"
dependencies = []

[project.scripts]
tesdtrelease = "tesdtrelease:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
